定时器改为在QuicEpollWait中处理, 拆分出session以保障factory和TaskRunnerProxy的生命期长于QuicSession

--- a/simple/CMakeLists.txt
+++ b/simple/CMakeLists.txt
@@ -21,15 +21,15 @@ message("------------ Options -------------")
 message("  CMAKE_BUILD_TYPE: ${CMAKE_BUILD_TYPE}")
 message("  CMAKE_COMMAND: ${CMAKE_COMMAND}")
 
-set(CMAKE_CXX_FLAGS_DEBUG "-g -fno-omit-frame-pointer ${CMAKE_CXX_FLAGS}")
-set(CMAKE_CXX_FLAGS_RELEASE "-g -O3 -fno-omit-frame-pointer ${CMAKE_CXX_FLAGS}")
+set(CMAKE_CXX_FLAGS_DEBUG "-g -fno-strict-aliasing ${CMAKE_CXX_FLAGS}")
+set(CMAKE_CXX_FLAGS_RELEASE "-g -O3 -fno-strict-aliasing ${CMAKE_CXX_FLAGS}")
 
 message("------------ Cxx flags -------------")
 message("  CMAKE_CXX_FLAGS_${CMAKE_BUILD_TYPE}: ${CMAKE_CXX_FLAGS_${CMAKE_BUILD_TYPE}}")
 message("------------------------------------")
 
 # source
-aux_source_directory(${PROJECT_SOURCE_DIR} LIST_SRC)
+aux_source_directory(${PROJECT_SOURCE_DIR} SIMPLE_SRC)
 
 # include
 #include_directories(${PROJECT_SOURCE_DIR})
@@ -52,4 +52,4 @@ include_directories(${PROJECT_SOURCE_DIR}/../libquic/third_party/boringssl/src/i
 include_directories(${PROJECT_SOURCE_DIR}/../libquic/third_party/protobuf/src)
 
 # target
-add_library(${TARGET} STATIC ${LIST_SRC})
+add_library(${TARGET} STATIC ${SIMPLE_SRC})
